@@ -39,6 +39,7 @@ Tell the finder that some bits of finder-information such as creator
 or type for file \var{dst} has changed. The file can be specified by
 pathname or fsspec. This call should tell the finder to redraw the
 files icon.
+\deprecated{2.6}{The function is a no-op on OS X.}
 \end{funcdesc}
 
 \begin{datadesc}{BUFSIZ}
